add book emoticon

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     
-  <title>Google Book Search</title>
+  <title>📚 My Google Book Hunt</title>
 </head>
 
 <body>
